--- a/base-build/Dockerfile.node.master
+++ b/base-build/Dockerfile.node.master
@@ -13,8 +13,7 @@ RUN apt-get update && apt-get -y install cmake clang curl
 #RUN apt-get -y install libreadline-dev libncursesw5-dev libssl-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev libffi-dev zlib1g-dev
 #checkout source fresh and build
 WORKDIR /usr/src
-RUN git clone https://github.com/yeastplume/grin.git
-RUN git checkout cursive_update
+RUN git clone --branch v5.3.3_rebuild https://github.com/mimblewimble/grin.git
 WORKDIR /usr/src/grin
 RUN cargo build --release
 
@@ -24,7 +23,7 @@ RUN cargo build --release
 #Deploy binaries to a minimal image
 
 FROM grin_build as grin_node_master
-LABEL maintainer="yeastplume" description="Minimal Grin Node - Build from master"
+LABEL maintainer="yeastplume" description="Minimal Grin Node - Build from Tag v5.3.3_rebuild"
 COPY --from=grin_build /usr/src/grin/target/release/grin /usr/bin/grin
 RUN useradd -m grinuser
 USER grinuser
